# gvdb-binding

./: .gitignore  1  README.md  gvdb_test.py  libgvdb.spec  meson.build  policy_bin_reader.sip  pyproject.toml
.gear/: rules
.gear/tags/: list
.gear/upstream/: remotes
alt/docs/: README.typelib.md  gvdb_test.py
gvdb/: CMakeLists.txt  gvdb-builder.c  gvdb-builder.h  gvdb-format.h  gvdb-reader.c  gvdb-reader.h  meson.build
gvdb/documentation/: Gvdb.Item.html  Gvdb.Item.set_value.page  Gvdb.Table.get_contents.html  Gvdb.Table.get_names.html  Gvdb.Table.get_table.page  Gvdb.Table.has_value.html  Gvdb.Table.has_value.page  Gvdb.Table.new.html  Gvdb.Table.new.page  Gvdb.Table.new_from_bytes.html  Gvdb.Table.write_contents_finish.html  Gvdb.guint16_le-value.page  Gvdb.guint16_le.html  Gvdb.guint32_le-value.html  Gvdb.guint32_le.page  Gvdb.gvdb_hash_header-n_bloom_words.html  Gvdb.gvdb_hash_header-n_bloom_words.page  Gvdb.gvdb_hash_header-n_buckets.page  Gvdb.gvdb_hash_header.html  Gvdb.gvdb_hash_item-hash_value.page  Gvdb.gvdb_hash_item-key_size.page  Gvdb.gvdb_header.page  Gvdb.gvdb_pointer.page  Gvdb.hash_table_new.html  index.page
gvdb/gvdb/: Gvdb-1.0.typelib  Gvdb.gir  g-ir-cpp-z4o_fjnl.c  gvdb-builder.c  gvdb-builder.h  gvdb-reader.c  gvdb-reader.h
gvdb/gvdb/documentation/: Gvdb.Item.copy.html  Gvdb.Item.copy.page  Gvdb.Item.custom_free.html  Gvdb.Item.custom_free.page  Gvdb.Item.html  Gvdb.Item.new.html  Gvdb.Item.new.page  Gvdb.Item.page  Gvdb.Item.set_hash_table.html  Gvdb.Item.set_hash_table.page  Gvdb.Item.set_parent.html  Gvdb.Item.set_parent.page  Gvdb.Item.set_value.html  Gvdb.SIGNATURE0.html  Gvdb.SIGNATURE0.page  Gvdb.SIGNATURE1.html  Gvdb.SIGNATURE1.page  Gvdb.Table.copy.html  Gvdb.Table.copy.page  Gvdb.Table.empty_new.html  Gvdb.Table.empty_new.page  Gvdb.Table.free.html  Gvdb.Table.free.page  Gvdb.Table.get_contents.page  Gvdb.Table.get_names.page  Gvdb.Table.get_raw_value.html  Gvdb.Table.get_raw_value.page  Gvdb.Table.get_table.html  Gvdb.Table.get_table.page  Gvdb.Table.get_value.html  Gvdb.Table.get_value.page  Gvdb.Table.has_value.html  Gvdb.Table.has_value.page  Gvdb.Table.html  Gvdb.Table.is_valid.html  Gvdb.Table.is_valid.page  Gvdb.Table.list.html  Gvdb.Table.list.page  Gvdb.Table.new.html  Gvdb.Table.new.page  (+49 more)
gvdb/tests/: meson.build
