[build-system]
requires = ["python3-modele-sip6", "glib2-devel", "python3-module-pygobject3-devel"]
build-backend = "sipbuild.api"

[tool.sip.metadata]
name = "policy_bin_reader"
version = "0.1"
license = "GPLv2"

[tool.sip.bindings.policy_bin_reader]
headers = ["gvdb-builder.h", "gvdb-format.h", "gvdb-reader.h", "glib.h"]
libraries = ["gvdb", "glib-2.0"]
include-dirs = ["gvdb", "/usr/include/glib-2.0", "/usr/lib64/glib-2.0/include"]
library-dirs = ["gvdb/bin", "/usr/lib64"]